[package]
name = "rust-crawler"
version = "0.1.0"
edition = "2021"

authors = ["Your Name <you@example.com>"]
license = "MIT"
description = "A concurrent web crawler in Rust with bounded concurrency, deduping, and export to JSON."
repository = "https://github.com/yourname/rust-crawler"

[dependencies]
anyhow = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "stream"] }
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
url = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
